tests/specs/ClassGenericExtendsImplements.txt
# mod.ts
export class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B> {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B> {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

class Class<A, B> extends Map<A, B> implements Iterator<A>, Iterable<B>



# output.json
[
  {
    "kind": "class",
    "name": "Class",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": "Map",
      "implements": [
        {
          "repr": "Iterator",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": [
              {
                "repr": "A",
                "kind": "typeRef",
                "typeRef": {
                  "typeParams": null,
                  "typeName": "A"
                }
              }
            ],
            "typeName": "Iterator"
          }
        },
        {
          "repr": "Iterable",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": [
              {
                "repr": "B",
                "kind": "typeRef",
                "typeRef": {
                  "typeParams": null,
                  "typeName": "B"
                }
              }
            ],
            "typeName": "Iterable"
          }
        }
      ],
      "typeParams": [
        {
          "name": "A"
        },
        {
          "name": "B"
        }
      ],
      "superTypeParams": [
        {
          "repr": "A",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "A"
          }
        },
        {
          "repr": "B",
          "kind": "typeRef",
          "typeRef": {
            "typeParams": null,
            "typeName": "B"
          }
        }
      ]
    }
  }
]
